# ballerine

./: .branchlintrc.cjs  .dockerignore  .editorconfig  .eslint.ballerine.cjs  .eslintignore  .gitignore  .gitmodules  .lintstagedrc.json  .npmrc  .nvmrc  .prettierrc.cjs  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STYLE_GUIDE.md  ballerine_install.sh  bug-report.md  commitlint.config.cjs  devcon-workshop.postman_collection.json  docker-compose-ex-prebuilt.yml  dump.rdb  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pull-request.md  release.ts  render.yml
.changeset/: afraid-jokes-matter.md  big-papayas-tickle.md  breezy-bottles-arrive.md  breezy-donuts-notice.md  config.json  cuddly-ghosts-search.md  early-hairs-itch.md  eight-cheetahs-jump.md  eleven-lizards-kneel.md  fair-dots-kneel.md  fast-chefs-count.md  fifty-clouds-change.md  fifty-tools-agree.md  five-wombats-thank.md  fluffy-rockets-mix.md  fresh-bears-promise.md  funny-walls-jam.md  fuzzy-bananas-join.md  fuzzy-geckos-fold.md  great-books-allow.md  great-plants-battle.md  great-seahorses-check.md  great-tigers-travel.md  healthy-mangos-yell.md  (+59 more)
experiments/rules-engine/json-rules-engine-rust/: CHANGELOG.md  Cargo.toml  Makefile  README.md  rustfmt.toml  schema.json
experiments/rules-engine/json-rules-engine-rust/src/: condition.rs  constraint.rs  error.rs  lib.rs  rule.rs  status.rs
experiments/rules-engine/json-rules-engine-rust/src/event/: email_notification.rs  mod.rs  post_callback.rs
experiments/rules-engine/json-rules-engine-rust/tests/: tests.rs
(+5471 files in other folders)
